# aoc23

./: CMakeLists.txt
d1/: example2  main.cxx
d2/: main.cxx
d3/: main.cxx
d4/: helpers.h  main.cxx
